added nav to all pages

--- a/MulhollandHome.html
+++ b/MulhollandHome.html
@@ -10,19 +10,21 @@
 <body>
     <header role="banner">
         <h1>Mulholland Drive</h1>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-primary sticky-top">
-            <!-- <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#expandme">
-                <span class="navbar-toggler-icon"></span>
-            </button> -->
-            <div class="collapse navbar-collapse" id="expandme">
-                <div class="navbar-nav">
-                    <a href="Home" class="nav-item nav-link">Home</a>
-                    <a href="Home" class="nav-item nav-link">Summary</a>
-                    <a href="Home" class="nav-item nav-link">Characters</a>
-                    <a href="Home" class="nav-item nav-link">Impact</a>
-                </div>
-            </div>
+        <h2>Welcome To Mulholland Drive</h2>
+        <nav role="navigation">
+            <ul>
+                <li><a href="MulhollandHome.html" title="Mulholland Drive Home">Home</a></li>
+                <li><a href="summary.html" title="Summary Of Mulholland Drive">Summary</a></li>
+                <li><a href="characters.html" title="Characters of Mulholland">Characters</a></li>
+                <li><a href="impact.html" title="Impact of Mulholland Drive">Impact</a></li>
+            </ul>
         </nav>
     </header>
+    <main role="main">
+        <article role="article">
+            <p>
+                Mulholland Drive is filled with colorful and mysterious characters that, it deserves it's own page!
+            </p>
+        </article>
+    </main>
 </body>
