--- a/summary.html
+++ b/summary.html
@@ -1,1 +1,23 @@
+<!DOCTYPE HTML>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <title>Mulholland Drive </title>
+    <link href="_css/styles.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <header role="banner">
+        <h1>Mulholland Drive</h1>
+        <h2>Summary Of Mulholland Drive</h2>
+        <nav role="navigation">
+            <ul>
+                <li><a href="MulhollandHome.html" title="Mulholland Drive Home">Home</a></li>
+                <li><a href="summary.html" title="Summary Of Mulholland Drive">Summary</a></li>
+                <li><a href="characters.html" title="Characters of Mulholland">Characters</a></li>
+                <li><a href="impact.html" title="Impact of Mulholland Drive">Impact</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
