--- a/characters.html
+++ b/characters.html
@@ -20,4 +20,11 @@
             </ul>
         </nav>
     </header>
+    <Main role="main">
+        <article role="article">
+            <p>
+                <img src="images/mulhollanddr_1280.png" width="1280" height="720" alt="theaterscene">
+            </p>
+        </article>
+    </Main>
 </body>
