added images and descriptions

--- a/characters.html
+++ b/characters.html
@@ -24,6 +24,28 @@
         <article role="article">
             <p>
                 <img src="images/mulhollanddr_1280.png" width="1280" height="720" alt="theaterscene">
+                Throughout the length of Mulholland Drive we are introduced to the most colorful and mysterious
+                characters, so much that it deserves its own page.
+                Through the length of Mulholland Drive it could get confusing to keep up with these characrers and their
+                motivations so here we will break it all down.
+            <h2>Betty Elms</h2>
+            <img src="images/a90ddddeae8a0efc6ca9290582907668.jpg" width="600" height="360" alt="betty elms">
+            Betty Elms (played by Naomi Watts), is a young aspiring actress who moves to Hollywood to chase her dream of
+            being a big movie star. As she stays at her Aunt Ruth's place she finds another girl
+            named Rita staying at her Aunt's house. But Rita has lost her memories and Betty is persistent on helping
+            Rita recover her memories and find out who she is.
+
+            <h2>Rita</h2>
+            <img src="images/863d01994fce1b6b5a0e85d6cd54b7df.jpg" width="600" height="360" alt="rita">
+            Rita (played by Laura Harring), we first see Rita in the back of a car where two men attempt to take her
+            life but by luck crash the car which leaves Rita able to escape.
+            But as Rita wakes up she cannot remember who she is and where she is. She soons reaches Aunt Ruth's house,
+            where she sneaks in and settles down while Aunt Ruth vacates the home waiting for her neice to come.
+            While she's there, Betty comes where they meet face to face and it is revealed that Rita does not know her
+            own identity and only says her name is "Rita" because of a poster on the wall. Once Betty finds out it is
+            Betty's mission to help Rita find out who she is, as the two spend
+            more and more time together
+            they soon develop feelings for each other.
             </p>
         </article>
     </Main>
