added Adam Kesher image and description

--- a/characters.html
+++ b/characters.html
@@ -46,6 +46,15 @@
             Betty's mission to help Rita find out who she is, as the two spend
             more and more time together
             they soon develop feelings for each other.
+
+            <h2>Adam Kesher</h2>
+            <img src="images/4ec260af16f6ad22733687139f71d253.jpg" width="600" height="360" alt="adam kesher">
+            Adam Kesher (played by Justin Theroux), is a Hollywood director trying to make a film throughout Mulholland
+            Drive. His film is taken control
+            by Mobsters who have control in Hollywood. The Mobsters advise Kesher that he casts a certain actress in his
+            movie but he refuses. After he refuses he goes on to have
+            one of the worst days any human can. As he meets with a mysterious person named "The Cowboy", who urges him
+            to cast the actress for his own good, he finally gives in.
             </p>
         </article>
     </Main>
