added Dan image and description

--- a/characters.html
+++ b/characters.html
@@ -55,6 +55,12 @@
             movie but he refuses. After he refuses he goes on to have
             one of the worst days any human can. As he meets with a mysterious person named "The Cowboy", who urges him
             to cast the actress for his own good, he finally gives in.
+            <h2>Dan</h2>
+            <img src="images/mulholland-drive-dan.jpg" width="600" height="360" alt="rita">
+            Dan (played by Patrick Fischler), is a man in a diner recounting a terrifying nightmare he had seeing a
+            horrifying person behind the counter he is currently at.
+            As he checks behind the counter to confront this uncomfortable feeling he has, a homeless bum comes out of
+            the back and scares him which causes him to collapse.
             </p>
         </article>
     </Main>
