--- a/characters.html
+++ b/characters.html
@@ -58,7 +58,7 @@
             <h2>Dan</h2>
             <img src="images/mulholland-drive-dan.jpg" width="600" height="360" alt="rita">
             Dan (played by Patrick Fischler), is a man in a diner recounting a terrifying nightmare he had seeing a
-            horrifying person behind the counter he is currently at.
+            horrifying person behind the diner he is currently at.
             As he checks behind the counter to confront this uncomfortable feeling he has, a homeless bum comes out of
             the back and scares him which causes him to collapse.
             </p>
