added images and description

--- a/MulhollandHome.html
+++ b/MulhollandHome.html
@@ -23,7 +23,8 @@
     <main role="main">
         <article role="article">
             <p>
-                Mulholland Drive is filled with colorful and mysterious characters that, it deserves it's own page!
+                <img src="images/mulholland-drive-poster.jpg" width="900" height="600" alt="rita">
+                Mulholland Drive, released in 2001, is a masterpiece and a defining peice of the 2000s.
             </p>
         </article>
     </main>
