--- a/summary.html
+++ b/summary.html
@@ -20,4 +20,22 @@
             </ul>
         </nav>
     </header>
+    <Main role="main">
+        <article role="article">
+            <p>
+                <img src="images/bettyfade.jpg" width="960" height="517" alt="betty fade scene">
+                We follow a Limo driving through the darkness of the Hollywood hills. Two men in suits are sitting in
+                the front while a dark haired woman is sitting in the back.
+                The car stops and one of the men pulls out a silenced pistol and orders the woman to get out of the car.
+                As one of the men come out the car to drag her out a car who was racing
+                another car on the hills crashes into limo which causes both men to die instantly. The woman was thrown
+                to the back of the seats and had hit her head causing her to start bleeding. After
+                realizing what just happened she leaves the car and starts to walk through the trees and hills of
+                Hollywood trying to get to safety. As she walks the streets she hides behind bushes and trees
+                when she senses someone might see her.
+
+                As we find her
+            </p>
+        </article>
+    </Main>
 </body>
