added css and more desc

--- a/summary.html
+++ b/summary.html
@@ -33,9 +33,49 @@
                 realizing what just happened she leaves the car and starts to walk through the trees and hills of
                 Hollywood trying to get to safety. As she walks the streets she hides behind bushes and trees
                 when she senses someone might see her.
-
-                As we find her
             </p>
+
+            <p>
+
+                As she wakes up she sees someone in front of the house shes hiding at packing her things into a taxi and
+                when she looks away the woman sneaks into the house.
+                We then see a diner where a man is telling his friend about a horrifying dream he had about seeing a man
+                behind the diner and he came here to the exact
+                diner in his dreams to see if the man is there. He explains that he had two of the same dreams and his
+                friend was in both of them very afraid. They then walk out to the back of diner to confront his fear
+                and then we he reaches the wall BOOM! a hideous man scares him causing him to collapse.
+            </p>
+            <p>
+                We cut to the woman still sleeping as, a small man calls someone at the front desk telling him the girl
+                is
+                still missing. We then see a blonde woman named Betty arrive in Los Angeles at the airport and she is
+                excited to
+                finally be here. She kisses
+                this elderly couple goodbye and they wish the best while she is here. As she leaves the elderly couple
+                in the taxi have this eerly smile as they leave. Betty then arrives at the place she is staying at, its
+                the same place the dark hair woman snuck into!
+                She meets the manager and they have small talk as she escorts Betty into her new home. Betty then
+                explores her new place joyfully and goes into the bathroom where she finds
+                the dark hair woman showering she is startled and says she didn't know her Aunt Ruth had someone else
+                living here. Betty asks for her name but she couldn't ansswer as she looks lost trying to remember her
+                name.
+
+            </p>
+
+            <p>
+                At a tall building, with a big sign called Ryan Entertainment, we see businessmen talking to a Director
+                asking or urging him to cast a certain actress for his movie.
+                We learn the direcot rname is Adam Kesher and that the woman they want him to cast is a blonde woman
+                named Camilia Rhodes. As one man keeps saying this is the recommendation
+                another man insists this is the girl and not a suggestion. As Kesher resists and says no way the man
+                across from him stares deep into his eyes with a fierce intimidating look. After a series of weird tense
+                strange events where the man
+                drinks his expresso and spits it out, the room becomes loud and Kesher exclaims "that is not the girl!"
+                while the man in a calm tone says "this is no longer your film." After Kesher leaves the building he
+                finds the car that belong to the people
+                that are taking over his film and destroy their car.
+            </p>
+
         </article>
     </Main>
 </body>
