added location and david lynch

--- a/MulhollandHome.html
+++ b/MulhollandHome.html
@@ -22,9 +22,36 @@
     </header>
     <main role="main">
         <article role="article">
+
+            <img src="images/mulholland-drive-poster.jpg" width="900" height="600" alt="rita">
+            <p> Mulholland Drive, released in 2001, is a masterpiece and a defining peice of the 2000s. This movie has
+                made me fall in love
+                with the art of cinema, so I made a website dedicated to it. David Lynch, the director, has made
+                mesmerising pieces of art over the years,
+                Lost Highway, Blue Velvet, Inland Empire, and Twin Peaks. But Mulholland Drive is arguably his best work
+                and maybe most impactful.
+            </p>
+            <h2>Locations</h2>
+            <img src="images/Mulholland-Drive-Caesars.jpg" width="600" height="420" alt="diner"
+                style="display:inline-block;">
+            <img src="images/Mulholland-Drive-Il-Borghese.jpg" width="600" height="420" alt="ruthshouse"
+                style="display:inline-block;">
             <p>
-                <img src="images/mulholland-drive-poster.jpg" width="900" height="600" alt="rita">
-                Mulholland Drive, released in 2001, is a masterpiece and a defining peice of the 2000s.
+                As the title of the movie suggests the movie was filmed in Los Angeles and yes, Mullholland Drive.
+                For example, Aunt Ruth's house where we see Betty and Rita stay at is located in Rosewood Avenue,
+                Hollywood and
+                other locations like Winkie's Diner is located in Gardena, Los Angeles. David Lynch in his works does
+                not hide the fact
+                he is fascinating with the city of Los Angeles and is a key part to his stories. Mulholland Drive
+                location is crucial to
+                the story the myths and mysterys of Hollywood and Los Angeles is what brings this story together.
+            </p>
+            <h2>David Lynch</h2>
+
+            <p>
+                <img src="images/davidlynch.jpg" width="600" height="420" alt="david lynch">
+                Born in January 20, 1946 and Died January 16, 2025.
+
             </p>
         </article>
     </main>
